Fix input width on safari

--- a/app/styles/app/layouts/profile.sass
+++ b/app/styles/app/layouts/profile.sass
@@ -201,9 +201,8 @@ p.profile-user-last
     border: 1px solid $pebble-grey
     width: 40%
     border-radius: 2px
-    min-width: 25em
-    width: 40%
-    max-width: 100%
+    width: 100%
+    max-width: 400px
     background: url(/images/stroke-icons/icon-filter.svg) no-repeat scroll
     background-size: auto 50%
     background-position: 0.5em center
